--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.20.4",
+		"autoprefixer": "^10.4.14",
+		"postcss": "^8.4.24",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
+		"tailwindcss": "^3.3.2",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.6",
 		"vitest": "^0.25.3"
