--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"postcss": "^8.4.24",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
+		"rollup-plugin-wit-component": "^0.1.0",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.2",
@@ -29,7 +30,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@wasm-tool/rollup-plugin-rust": "^2.4.0",
-		"rollup-plugin-wit-component": "file:../../rollup-plugin-wit-component"
+		"@wasm-tool/rollup-plugin-rust": "^2.4.0"
 	}
 }
