--- a/package.json
+++ b/package.json
@@ -28,8 +28,5 @@
 		"vite": "^4.3.6",
 		"vitest": "^0.25.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"@wasm-tool/rollup-plugin-rust": "^2.4.0"
-	}
+	"type": "module"
 }
