--- a/crates/wurbo/Cargo.toml
+++ b/crates/wurbo/Cargo.toml
@@ -2,9 +2,18 @@
 name = "wurbo"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "A timy framework for WebAssembly Component model front-ends"
+homepage = "https://github.com/DougAnderson444/blastkids"
+documentation = "https://docs.rs/wurbo"
+repository = "https://github.com/DougAnderson444/wurbo"
+readme = "README.md"
+keywords = ["WebAssembly"]
+authors = ["Doug Anderson <DougAnderson444@peerpiper.io>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 render = "0.3.1"
 lazy_static = "1.4.0"
+nanoid = "0.4.0"
