--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "wurbo",
-	"version": "0.0.2",
+	"version": "0.1.0",
 	"license": "MIT",
 	"author": "DougAnderson444 <DougAnderson444@gmail.com>",
 	"description": "A tiny front-end framework for webassembly components",
@@ -15,6 +15,7 @@
 			"default": "./dist/index.js"
 		}
 	},
+  "files": ["dist"],
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
