--- a/crates/vowels/Cargo.toml
+++ b/crates/vowels/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 cargo-component-bindings = "0.5.0"
 render = "0.3.1"
 wurbo = { workspace = true }
+minijinja = { workspace = true }
+nanoid = "0.4.0"
 
 [lib]
 crate-type = ["cdylib"]
