--- a/crates/forms/Cargo.toml
+++ b/crates/forms/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "vowels"
+name = "forms"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,14 +7,12 @@ edition = "2021"
 
 [dependencies]
 cargo-component-bindings = "0.5.0"
-render = "0.3.1"
 wurbo = { workspace = true }
-nanoid = "0.4.0"
 
 [lib]
 crate-type = ["cdylib"]
 
 [package.metadata.component]
-package = "component:vowels"
+package = "component:forms"
 
 [package.metadata.component.dependencies]
