--- a/crates/wurbo/Cargo.toml
+++ b/crates/wurbo/Cargo.toml
@@ -18,9 +18,11 @@ lazy_static = "1.4.0"
 nanoid = "0.4.0"
 thiserror = "1.0"
 minijinja = { version = "1.0.11", features = ["json"] }
-serde = { version = "1.0.130" }
-serde_json = "1.0.68"
+serde = { version = "1.0.196", features = ["derive"] }
+serde_json = { version = "1.0.112" }
+base64ct = { version = "1.6.0", features = ["alloc"] }
 
+convert_case = "0.6.0"
 pest = "2.6"
 pest_derive = "2.6"
 
