--- a/examples/forms/Cargo.toml
+++ b/examples/forms/Cargo.toml
@@ -13,7 +13,7 @@ wurbo = { workspace = true }
 crate-type = ["cdylib"]
 
 [package.metadata.component]
-package = "component:forms"
+package = "demo:forms"
 
 # It's not documented, but you can use `package.metadata.component.bindings` to
 # set additional derive attributes for the generated bindings:
