--- a/crates/wurbo/Cargo.toml
+++ b/crates/wurbo/Cargo.toml
@@ -17,7 +17,7 @@ authors = ["Doug Anderson <DougAnderson444@peerpiper.io>"]
 lazy_static = "1.4.0"
 nanoid = "0.4.0"
 thiserror = "1.0"
-minijinja = { version = "1.0.11", features = ["json"] }
+minijinja = { version = "1.0.11", features = ["json", "loader"] }
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = { version = "1.0.112" }
 base64ct = { version = "1.6.0", features = ["alloc"] }
