--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "wurbo",
-	"version": "0.3.0",
+	"version": "0.3.1",
 	"license": "MIT",
 	"author": "DougAnderson444 <DougAnderson444@gmail.com>",
 	"description": "A tiny front-end framework for webassembly components",
@@ -13,6 +13,10 @@
 		".": {
 			"types": "./dist/index.d.ts",
 			"default": "./dist/index.js"
+		},
+		"./worker": {
+			"types": "./dist/worker.d.ts",
+			"default": "./dist/bundled/worker.js"
 		}
 	},
 	"files": [
@@ -20,7 +24,7 @@
 	],
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
+		"build": "node ./buildWorker.js && vite build",
 		"preview": "vite preview",
 		"package": "svelte-package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
@@ -30,20 +34,24 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-static": "^2.0.2",
-		"@sveltejs/kit": "^1.20.4",
+		"@rollup/plugin-terser": "^0.4.4",
+		"@sveltejs/adapter-auto": "^3.1.1",
+		"@sveltejs/adapter-static": "^3.0.1",
+		"@sveltejs/kit": "^2.5.2",
+		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"autoprefixer": "^10.4.14",
 		"esm-env": "^1.0.0",
 		"postcss": "^8.4.24",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
-		"rollup-plugin-wit-component": "^0.2.0",
+		"rollup-plugin-wit-component": "file:../../js/rollup-plugin-wit-component",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.2",
+		"terser": "^5.29.2",
 		"typescript": "^5.0.0",
-		"vite": "^4.5.2",
+		"vite": "^5.1.4",
+		"vite-plugin-mkcert": "^1.17.4",
 		"vitest": "^0.25.3"
 	},
 	"peerDependencies": {
