--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.1.4",
 		"vite-plugin-mkcert": "^1.17.4",
+		"vite-plugin-tailwind-purgecss": "^0.3.1",
 		"vitest": "^0.25.3"
 	},
 	"peerDependencies": {
