--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "wurbo",
-	"version": "0.3.5",
+	"version": "0.3.6",
 	"license": "MIT",
 	"author": "DougAnderson444 <DougAnderson444@gmail.com>",
 	"description": "A tiny front-end framework for webassembly components",
@@ -45,7 +45,7 @@
 		"postcss": "^8.4.24",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
-		"rollup-plugin-wit-component": "file:../../js/rollup-plugin-wit-component",
+		"rollup-plugin-wit-component": "0.2.2",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.2",
