--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
 		"lint": "prettier --plugin-search-dir . --check .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
+	"dependencies": {
+		"rollup-plugin-wit-component": "0.2.4"
+	},
 	"devDependencies": {
 		"@rollup/plugin-terser": "^0.4.4",
 		"@sveltejs/adapter-auto": "^3.1.1",
@@ -45,7 +48,6 @@
 		"postcss": "^8.4.24",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
-		"rollup-plugin-wit-component": "0.2.4",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.2",
