--- a/examples/vowels/Cargo.toml
+++ b/examples/vowels/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bitflags = "2.5.0"
-wit-bindgen-rt = "0.23.0"
+wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }
 render = "0.3.1"
 wurbo = { workspace = true }
 nanoid = "0.4.0"
